# cmd/docs/swagger.yaml
@@ -1,9 +1,20 @@
 basePath: /api/v1
-host: localhost:8080
+definitions:
+  models.UserLogin:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
+host: 192.168.1.57:8080
 info:
   contact: {}
-  description: 8===D----
-  title: SJ Ticketing API Go F*ck Yourself
+  description: Ticketing API v1.0
+  title: SJ Ticketing API
   version: "1.0"
 paths:
   /login:
@@ -11,16 +22,12 @@ paths:
       description: Log a user in
       operationId: login-user
       parameters:
-      - description: Email Address
-        in: path
-        name: email
+      - description: User Login
+        in: body
+        name: user_login
         required: true
-        type: string
-      - description: Password
-        in: path
-        name: password
-        required: true
-        type: string
+        schema:
+          $ref: '#/definitions/models.UserLogin'
       produces:
       - application/json
       responses:
@@ -148,6 +155,66 @@ paths:
       security:
       - Bearer: []
       summary: Update a Ticket
+  /tickets/{id}/completed:
+    patch:
+      description: Update ticket status to completed
+      operationId: update-ticket-completed
+      parameters:
+      - description: Ticket ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response
+        "400":
+          description: Invalid ticket ID
+        "404":
+          description: Ticket not found
+        "500":
+          description: Database error
+      security:
+      - Bearer: []
+      summary: Update a Ticket status to completed
+  /tickets/{id}/pending:
+    patch:
+      description: Update ticket status to pending
+      operationId: update-ticket-pending
+      parameters:
+      - description: Ticket ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response
+        "400":
+          description: Invalid ticket ID
+        "404":
+          description: Ticket not found
+        "500":
+          description: Database error
+      security:
+      - Bearer: []
+      summary: Update a Ticket status to pending
+  /users:
+    get:
+      description: Get Single User
+      operationId: get-user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response
+        "400":
+          description: Database error
+      summary: Get Single User
 schemes:
 - http
 securityDefinitions:
